@@ -3,6 +3,8 @@ Changelog:
 3.11
 - Added Un'Goro Soil quest
 - Now shows a warning the first time you try to delete an item used by quests in any route (resets on reload)
+- Fixed Brood of Nozdormu rep rings not showing up in Solo route
+- Fixed 'Quest Completion' warnings not showing up for Brood of Nozdormu rep ring quests
 
 3.10
 - Fixed lua error with comment
